--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   justify-content: center;
   align-items: center;
 }
-div {
+div{
   width: 100px;
   height: 100px;
   background-color: red;
@@ -37,3 +37,34 @@ left:0px; top:200px;}
 #red {
   animation: myfirst var(--animation-time) ease alternate infinite;
    }
+
+    div.a {
+    width: 50px;
+    height:50px;
+    border-radius: 50%;
+    background-color:red;
+    position:fixed;
+        
+    }
+    
+    div.b {
+    width: 50px;
+    height:50px;
+       border-radius: 50%;
+     background-color:blue;
+    position:fixed;
+      }
+    div.c {
+    width: 50px;
+    height:50px;
+      border-radius: 50%;
+     background-color:green;
+    position:fixed;
+        }
+    div.d {
+    width: 50px;
+    height:50px;
+      border-radius: 50%;
+     background-color:yellow;
+    position:fixed;
+        }
